--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -22,11 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_path = f'data/clean/NYU'\n",
+    "num_of_regions = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_path = f'data.nosync/clean/ADHD200_{}'\n",
     "file_list = os.listdir(clean_path)\n",
     "file_list.remove('.DS_Store')"
    ]
