--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -17,87 +17,266 @@
     "from tqdm import tqdm\n",
     "import pickle\n",
     "import math \n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_of_regions = 7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_path = f'data.nosync/clean/ADHD200_{}'\n",
-    "file_list = os.listdir(clean_path)\n",
-    "file_list.remove('.DS_Store')"
+    "import os\n",
+    "from scripts.eda_func import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define what data to use\n",
+    "data_folder = 'ADHD200_7'\n",
+    "#If a mac\n",
+    "mac = True\n",
+    "path_addon = '.nosync' if mac == True else ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 395/395 [02:15<00:00,  2.92it/s]\n"
+     "ename": "TypeError",
+     "evalue": "read_csv() got an unexpected keyword argument 'index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#Just run ones\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m#mean, var = get_mean_and_var_stats(data_folder = 'ADHD200_7', \u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#                                   mac = True)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m mean_pr_roi = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43mf\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdata\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mpath_addon\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m/stats/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mdata_folder\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[33;43m_mean_subject.csv\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msep\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m;\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mUnnamed: 0\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m var_pr_roi = pd.read_csv(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mdata\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath_addon\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/stats/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata_folder\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_variance_subject.csv\u001b[39m\u001b[33m'\u001b[39m, sep = \u001b[33m'\u001b[39m\u001b[33m;\u001b[39m\u001b[33m'\u001b[39m, index = \u001b[33m'\u001b[39m\u001b[33mUnnamed: 0\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: read_csv() got an unexpected keyword argument 'index'"
      ]
     }
    ],
    "source": [
-    "means_pr_roi = []\n",
-    "var_pr_roi = []\n",
+    "#Just run ones\n",
+    "#mean, var = get_mean_and_var_stats(data_folder = 'ADHD200_7', \n",
+    "#                                   mac = True)\n",
     "\n",
-    "\n",
-    "for subject in tqdm(file_list): #For each subject\n",
-    "    subject_means = {}\n",
-    "    subject_variance = {}\n",
-    "\n",
-    "    subject_means['subject'] = subject\n",
-    "    subject_variance['subject'] = subject\n",
-    "   \n",
-    "    subject = np.load(f'data/clean/NYU/{subject}')\n",
-    "    for i in subject.files: #For each ROI \n",
-    "        if i != \"allow_pickle\": #TODO fix, there is a strange \"Allow pickle thing here sometimes??\"\n",
-    "            roi = subject[i]\n",
-    "            values = []\n",
-    "            #Get all values from each timestep\n",
-    "            for t in range(roi.shape[0]):\n",
-    "                values += roi[t].tolist() #appends\n",
-    "            #Calculate mean and variance           \n",
-    "            subject_means[i] = sum(values)/len(values)\n",
-    "            subject_variance[i] = np.var(values)\n",
-    "    #Append to list\n",
-    "    means_pr_roi.append(subject_means)\n",
-    "    var_pr_roi.append(subject_variance)"
+    "mean_pr_roi = pd.read_csv(f'data{path_addon}/stats/{data_folder}_mean_subject.csv', sep = ';', index = 'Unnamed: 0')\n",
+    "var_pr_roi = pd.read_csv(f'data{path_addon}/stats/{data_folder}_variance_subject.csv', sep = ';', index = 'Unnamed: 0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>ROI_1</th>\n",
+       "      <th>ROI_2</th>\n",
+       "      <th>ROI_3</th>\n",
+       "      <th>ROI_4</th>\n",
+       "      <th>ROI_5</th>\n",
+       "      <th>ROI_6</th>\n",
+       "      <th>ROI_7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>sfnwmrda3662296_session_1_rest_1.npz</td>\n",
+       "      <td>-0.053762</td>\n",
+       "      <td>-0.036771</td>\n",
+       "      <td>-0.038687</td>\n",
+       "      <td>0.020942</td>\n",
+       "      <td>0.019240</td>\n",
+       "      <td>-0.016183</td>\n",
+       "      <td>0.122955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>sfnwmrda0010097_session_1_rest_1.npz</td>\n",
+       "      <td>-0.078128</td>\n",
+       "      <td>0.015103</td>\n",
+       "      <td>0.033021</td>\n",
+       "      <td>0.114923</td>\n",
+       "      <td>-0.008837</td>\n",
+       "      <td>0.087359</td>\n",
+       "      <td>0.037721</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>sfnwmrda0010064_session_1_rest_1.npz</td>\n",
+       "      <td>0.053295</td>\n",
+       "      <td>0.135678</td>\n",
+       "      <td>-0.005745</td>\n",
+       "      <td>0.062441</td>\n",
+       "      <td>0.001765</td>\n",
+       "      <td>-0.044576</td>\n",
+       "      <td>-0.041216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>sfnwmrda0010056_session_1_rest_2.npz</td>\n",
+       "      <td>0.003323</td>\n",
+       "      <td>-0.047664</td>\n",
+       "      <td>0.066981</td>\n",
+       "      <td>-0.023497</td>\n",
+       "      <td>0.074223</td>\n",
+       "      <td>0.014775</td>\n",
+       "      <td>0.031188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>sfnwmrda4562206_session_1_rest_1.npz</td>\n",
+       "      <td>-0.109720</td>\n",
+       "      <td>-0.024945</td>\n",
+       "      <td>0.048754</td>\n",
+       "      <td>0.092587</td>\n",
+       "      <td>0.058001</td>\n",
+       "      <td>0.066728</td>\n",
+       "      <td>0.038227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>389</td>\n",
+       "      <td>sfnwmrda3349205_session_1_rest_1.npz</td>\n",
+       "      <td>0.082675</td>\n",
+       "      <td>-0.040420</td>\n",
+       "      <td>0.006810</td>\n",
+       "      <td>0.078059</td>\n",
+       "      <td>0.025791</td>\n",
+       "      <td>0.033715</td>\n",
+       "      <td>0.117695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>390</td>\n",
+       "      <td>sfnwmrda2054438_session_1_rest_2.npz</td>\n",
+       "      <td>-0.263807</td>\n",
+       "      <td>-0.073578</td>\n",
+       "      <td>-0.019148</td>\n",
+       "      <td>-0.133474</td>\n",
+       "      <td>0.084002</td>\n",
+       "      <td>0.056816</td>\n",
+       "      <td>0.260748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>391</th>\n",
+       "      <td>391</td>\n",
+       "      <td>sfnwmrda0010107_session_1_rest_1.npz</td>\n",
+       "      <td>0.032012</td>\n",
+       "      <td>0.039406</td>\n",
+       "      <td>-0.020016</td>\n",
+       "      <td>0.036721</td>\n",
+       "      <td>-0.014491</td>\n",
+       "      <td>-0.006500</td>\n",
+       "      <td>-0.035797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>392</td>\n",
+       "      <td>sfnwmrda1127915_session_1_rest_1.npz</td>\n",
+       "      <td>0.045342</td>\n",
+       "      <td>0.012547</td>\n",
+       "      <td>-0.015826</td>\n",
+       "      <td>-0.010076</td>\n",
+       "      <td>-0.026546</td>\n",
+       "      <td>-0.020697</td>\n",
+       "      <td>-0.072999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>393</td>\n",
+       "      <td>sfnwmrda0010014_session_1_rest_2.npz</td>\n",
+       "      <td>0.229913</td>\n",
+       "      <td>-0.079779</td>\n",
+       "      <td>-0.015335</td>\n",
+       "      <td>-0.201110</td>\n",
+       "      <td>0.297531</td>\n",
+       "      <td>-0.187633</td>\n",
+       "      <td>0.069717</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>394 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0                               subject     ROI_1     ROI_2  \\\n",
+       "0             0  sfnwmrda3662296_session_1_rest_1.npz -0.053762 -0.036771   \n",
+       "1             1  sfnwmrda0010097_session_1_rest_1.npz -0.078128  0.015103   \n",
+       "2             2  sfnwmrda0010064_session_1_rest_1.npz  0.053295  0.135678   \n",
+       "3             3  sfnwmrda0010056_session_1_rest_2.npz  0.003323 -0.047664   \n",
+       "4             4  sfnwmrda4562206_session_1_rest_1.npz -0.109720 -0.024945   \n",
+       "..          ...                                   ...       ...       ...   \n",
+       "389         389  sfnwmrda3349205_session_1_rest_1.npz  0.082675 -0.040420   \n",
+       "390         390  sfnwmrda2054438_session_1_rest_2.npz -0.263807 -0.073578   \n",
+       "391         391  sfnwmrda0010107_session_1_rest_1.npz  0.032012  0.039406   \n",
+       "392         392  sfnwmrda1127915_session_1_rest_1.npz  0.045342  0.012547   \n",
+       "393         393  sfnwmrda0010014_session_1_rest_2.npz  0.229913 -0.079779   \n",
+       "\n",
+       "        ROI_3     ROI_4     ROI_5     ROI_6     ROI_7  \n",
+       "0   -0.038687  0.020942  0.019240 -0.016183  0.122955  \n",
+       "1    0.033021  0.114923 -0.008837  0.087359  0.037721  \n",
+       "2   -0.005745  0.062441  0.001765 -0.044576 -0.041216  \n",
+       "3    0.066981 -0.023497  0.074223  0.014775  0.031188  \n",
+       "4    0.048754  0.092587  0.058001  0.066728  0.038227  \n",
+       "..        ...       ...       ...       ...       ...  \n",
+       "389  0.006810  0.078059  0.025791  0.033715  0.117695  \n",
+       "390 -0.019148 -0.133474  0.084002  0.056816  0.260748  \n",
+       "391 -0.020016  0.036721 -0.014491 -0.006500 -0.035797  \n",
+       "392 -0.015826 -0.010076 -0.026546 -0.020697 -0.072999  \n",
+       "393 -0.015335 -0.201110  0.297531 -0.187633  0.069717  \n",
+       "\n",
+       "[394 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#save stats\n",
-    "means_pr_roi = pd.DataFrame(means_pr_roi)\n",
-    "means_pr_roi.to_csv('data/stats/mean_subject.csv', sep= \";\")\n",
-    "\n",
-    "var_pr_roi = pd.DataFrame(var_pr_roi)\n",
-    "var_pr_roi.to_csv('data/stats/variance_subject.csv', sep= \";\")\n"
+    "mean_pr_roi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +293,7 @@
        "Name: ROI_1, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +1139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "thesis",
    "language": "python",
    "name": "python3"
   },
@@ -974,7 +1153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
