--- a/notebooks/eda/EDA_7_ROI.ipynb
+++ b/notebooks/eda/EDA_7_ROI.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -92,10 +92,10 @@
     "#                                   mac = True)\n",
     "\n",
     "#Load mean and variance\n",
-    "mean_pr_roi = pd.read_csv(f'data{path_addon}/stats/{data_folder}_mean_subject.csv', \n",
+    "mean_pr_roi = pd.read_csv(f'../../data{path_addon}/stats/{data_folder}_mean_subject.csv', \n",
     "                          sep = ';',\n",
     "                          index_col = 'Unnamed: 0')\n",
-    "var_pr_roi = pd.read_csv(f'data{path_addon}/stats/{data_folder}_variance_subject.csv', \n",
+    "var_pr_roi = pd.read_csv(f'../../data{path_addon}/stats/{data_folder}_variance_subject.csv', \n",
     "                         sep = ';',\n",
     "                         index_col = 'Unnamed: 0')\n",
     "\n",
@@ -117,11 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta_data = pd.read_csv('data.nosync/phenotypic/ADHD200_phenotypic.csv')\n",
+    "meta_data = pd.read_csv('../../data.nosync/phenotypic/ADHD200_phenotypic.csv')\n",
     "#Expand subject ID\n",
     "meta_data['ScanDir ID'] = meta_data['ScanDir ID'].apply(lambda x: ''.join(['0' for i in range(7-len(str(x)))]) + str(x))\n",
     "#Select columns\n",
