--- a/notebooks/eda/Activation_17_ROI.ipynb
+++ b/notebooks/eda/Activation_17_ROI.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "meta_data = pd.read_csv('data.nosync/phenotypic/ADHD200_phenotypic.csv')\n",
+    "meta_data = pd.read_csv('../../data.nosync/phenotypic/ADHD200_phenotypic.csv')\n",
     "#Expand subject ID\n",
     "meta_data['ScanDir ID'] = meta_data['ScanDir ID'].apply(lambda x: ''.join(['0' for i in range(7-len(str(x)))]) + str(x))\n",
     "#Select columns\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
     }
    ],
    "source": [
-    "threshold_data = pd.read_csv('data.nosync/stats/ADHD200_17_activation_thresholds.csv', sep = ';', index_col='Unnamed: 0')\n",
+    "threshold_data = pd.read_csv('../../data.nosync/stats/ADHD200_17_activation_thresholds.csv', sep = ';', index_col='Unnamed: 0')\n",
     "threshold_data['Subject_ID'] = threshold_data['Subject'].apply(lambda x: re.search(\"\\d{7}\", x)[0])\n",
     "threshold_data['Subject_ID'] = threshold_data['Subject_ID'].apply(lambda x: ''.join(['0' for i in range(7-len(str(x)))]) + str(x))\n",
     "\n",
@@ -404,11 +404,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_path = f'data.nosync/stats/ADHD200_17'\n",
+    "clean_path = f'../../data.nosync/stats/ADHD200_17'\n",
     "file_list = os.listdir(clean_path)\n",
     "if '.DS_Store' in file_list:\n",
     "    file_list.remove('.DS_Store')"
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
     "            #Get threshold\n",
     "            threshold = float(threshold_data[threshold_data['Subject'] == sub][thre])\n",
     "            #Get subject data\n",
-    "            subject = pd.read_csv(f'data.nosync/stats/ADHD200_17/{sub}.csv', sep=';', index_col='Unnamed: 0')\n",
+    "            subject = pd.read_csv(f'../../data.nosync/stats/ADHD200_17/{sub}.csv', sep=';', index_col='Unnamed: 0')\n",
     "            for i in regions:\n",
     "                subject[i] = subject[i].apply(lambda x: 1 if x >= threshold else 0)\n",
     "            binary_data[dig][thre].append(subject)\n",
