Final train, val, test split

--- a/GCN playground.ipynb
+++ b/GCN playground.ipynb
@@ -33,7 +33,9 @@
     "#Other\n",
     "import networkx as nx\n",
     "from scripts.prepare_data import create_data_split\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.metrics import f1_score\n"
    ]
   },
   {
@@ -41,25 +43,10 @@
    "execution_count": 2,
    "id": "99628760",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train size: 164, Test size: 36, Val size: 37\n",
-      "Train size: 126, Test size: 28, Val size: 28\n",
-      "Train size: 17, Test size: 3, Val size: 3\n",
-      "Train size: 16, Test size: 4, Val size: 4\n",
-      "Train size: 22, Test size: 4, Val size: 4\n",
-      "Train size: 40, Test size: 8, Val size: 8\n",
-      "Train size: 10, Test size: 2, Val size: 2\n",
-      "Train size: 66, Test size: 14, Val size: 14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_list = os.listdir('data.nosync/networks_multi')\n",
-    "create_data_split(files = file_list, train_val_size=0.15)\n",
+    "#create_data_split(files = file_list, train_val_size=0.15)\n",
     "class_dict = {'TD': 0, 'ASD-ADHD':1, 'ASD':2, 'ADHD':3}"
    ]
   },
@@ -80,7 +67,7 @@
     "        for e in G.edges():\n",
     "            u, v = e\n",
     "            for key, value in G[u][v].items():\n",
-    "                G[u][v][key]['edge_features'] = max(value['edge_features']+1, 0) if not math.isnan(value['edge_features']) else 0\n",
+    "                G[u][v][key]['edge_features'] = max(value['edge_features'], 0) if not math.isnan(value['edge_features']) else 0\n",
     "        graph = from_networkx(G, group_node_attrs = 'node_features', group_edge_attrs='edge_features')\n",
     "        graph.y = class_dict[network_class]\n",
     "        data_list.append(graph)\n",
@@ -89,139 +76,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "29229a99",
+   "execution_count": 4,
+   "id": "fdcc8b82",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = load_dataset(dataset='train')\n",
-    "val = load_dataset(dataset='val')"
+    "train_data = load_dataset(dataset='train')\n",
+    "val_data = load_dataset(dataset='val')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "10a9e0b5",
+   "execution_count": 5,
+   "id": "27af15ad",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([0, 1, 2, 3]), array([214,  27,  56, 164]))"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from math import log\n",
-    "classes = []\n",
-    "for i in train:\n",
-    "    classes.append(i.y)\n",
-    "np.unique(classes, return_counts= True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3b86ecf1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.1461870854236984\n"
-     ]
-    }
-   ],
-   "source": [
-    "#expected loss\n",
-    "class_dict = {0:214, 1:27, 2:56, 3:164}\n",
-    "total = len(classes)\n",
-    "total_loss = 0\n",
-    "for key, value in class_dict.items():\n",
-    "    total_loss += (-(value/total)*log(value/total))\n",
-    "print(total_loss)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "3451f7aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0, Train loss: 1.2887, Val loss: 1.2439\n",
-      "Epoch: 1, Train loss: 1.23631, Val loss: 1.21179\n",
-      "Epoch: 2, Train loss: 1.22288, Val loss: 1.19972\n",
-      "Epoch: 3, Train loss: 1.17042, Val loss: 1.19048\n",
-      "Epoch: 4, Train loss: 1.15512, Val loss: 1.1533\n",
-      "Epoch: 10, Train loss: 1.15259, Val loss: 1.13113\n",
-      "Epoch: 11, Train loss: 1.1391, Val loss: 1.12833\n",
-      "Epoch: 14, Train loss: 1.13307, Val loss: 1.13215\n",
-      "Epoch: 30, Train loss: 1.12015, Val loss: 1.14545\n",
-      "Epoch: 41, Train loss: 1.11517, Val loss: 1.14923\n",
-      "Epoch: 72, Train loss: 1.11184, Val loss: 1.12012\n",
-      "Epoch: 91, Train loss: 1.10896, Val loss: 1.16049\n",
-      "Epoch: 94, Train loss: 1.10355, Val loss: 1.15124\n"
-     ]
-    }
-   ],
-   "source": [
-    "seed_everything(42)\n",
-    "\n",
     "class MyConv(MessagePassing):\n",
-    "    def __init__(self, in_, out_, agg_func):\n",
+    "    def __init__(self, in_, out_, agg_func, dropout, activation):\n",
     "        super().__init__(agg_func)\n",
     "        self.conv = self.conv1 = GCNConv(in_, out_, \n",
     "                                         add_self_loops = True,\n",
     "                                         normalize = True)\n",
+    "        self.p = dropout\n",
+    "        if activation == 'sigmoid':\n",
+    "           self.activation = F.sigmoid\n",
+    "        elif activation == 'softmax':\n",
+    "           self.activation = F.softmax\n",
+    "        elif activation == 'relu':\n",
+    "           self.activation = F.relu\n",
+    "\n",
     "\n",
     "    def forward(self, x, edge_index, edge_weight):\n",
     "        x = self.conv(x, edge_index, edge_weight)\n",
-    "        x = F.dropout(x, p=0.2, training=self.training)\n",
-    "        x = F.relu(x)\n",
+    "        x = F.dropout(x, p=self.p, training=self.training)\n",
+    "        x = self.activation(x)\n",
     "        return x\n",
     "\n",
     "class GCN(torch.nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, out_, dropout_, activation_):\n",
     "        super().__init__()\n",
-    "        self.conv1 = MyConv(16, 16, aggr.MultiAggregation(\n",
-    "                                    ['mean', 'std']))\n",
-    "        self.conv2 = MyConv(16, 16, aggr.MeanAggregation())\n",
-    "        self.conv3 = MyConv(16, 16, aggr.MeanAggregation())\n",
-    "        self.conv4 = MyConv(16, 8, aggr.MeanAggregation())\n",
-    "        self.conv5 = MyConv(8, 4, aggr.MeanAggregation())\n",
-    "\n",
-    "    def after_each_layer(self, x):\n",
-    "        x = F.relu(x)\n",
-    "        x = F.dropout(x, training=self.training)\n",
-    "        return x\n",
+    "        self.conv1 = MyConv(in_ = 16, #Fixed to 16 features\n",
+    "                            out_ = out_, \n",
+    "                            agg_func = aggr.MeanAggregation(),\n",
+    "                            dropout = dropout_,\n",
+    "                            activation = activation_)\n",
+    "        self.conv2 = MyConv(in_ = out_, \n",
+    "                            out_ = 4, #Fixed to four classes\n",
+    "                            agg_func = aggr.MeanAggregation(),\n",
+    "                            dropout = dropout_,\n",
+    "                            activation = activation_)\n",
     "\n",
     "    def forward(self, data):\n",
     "        x, edge_index, edge_weight = data.x, data.edge_index, data.edge_attr.to(torch.float32)\n",
     "        batch = data.batch\n",
     "\n",
     "        x = self.conv1(x, edge_index, edge_weight)\n",
-    "        #x = self.after_each_layer(x)\n",
-    "        \n",
     "        x = self.conv2(x, edge_index, edge_weight)\n",
-    "        #x = self.after_each_layer(x)\n",
     "        \n",
-    "        x = self.conv3(x, edge_index, edge_weight)\n",
-    "        #x = self.after_each_layer(x)\n",
-    "        \n",
-    "        x = self.conv4(x, edge_index, edge_weight)\n",
-    "\n",
-    "        x = self.conv5(x, edge_index, edge_weight)\n",
-    "\n",
     "        #Get global value for network\n",
     "        x = global_max_pool(x, batch)\n",
     "        \n",
@@ -229,50 +141,104 @@
     "    \n",
     "    def predict(self, inputs):\n",
     "        with torch.no_grad():\n",
-    "            y = self.forward(inputs, train=False)\n",
+    "            y = self.forward(inputs)\n",
     "            predictions = torch.argmax(y, dim=-1)  # Take the argmax \n",
     "            return predictions\n",
-    "    \n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "model = GCN().to(device)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
-    "model.train()\n",
     "\n",
-    "loader = DataLoader(train, batch_size=64, shuffle = True)\n",
-    "val_loder = DataLoader(val, batch_size=64, shuffle = True)\n",
+    "def val_loop(model, val_loader, device):\n",
+    "    val_loss = 0\n",
+    "    with torch.no_grad():  \n",
+    "        for val_batch in val_loader:\n",
+    "            val_batch.to(device)\n",
+    "            val_y_hat = model.forward(val_batch)\n",
+    "            val_loss_batch = F.nll_loss(val_y_hat, val_batch.y)\n",
+    "            val_loss += val_loss_batch\n",
+    "    return val_loss/len(val_loader)\n",
     "\n",
-    "min_score = 10**6\n",
-    "\n",
-    "for epoch in range(100):\n",
-    "    epoch_loss = 0\n",
-    "    for batch in loader:\n",
+    "def train_loop(model, train_loader, optimizer, device):\n",
+    "    train_loss = 0\n",
+    "    model.train()\n",
+    "    for batch in train_loader:\n",
+    "        batch.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        out = model(batch)\n",
     "        loss = F.nll_loss(out, batch.y)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        epoch_loss += loss\n",
+    "        train_loss += loss\n",
+    "    return train_loss/len(train_loader)\n",
     "\n",
-    "    epoch_loss = epoch_loss/len(loader)\n",
-    "    \n",
-    "    if epoch_loss < min_score:\n",
-    "        min_score = epoch_loss\n",
-    "        \n",
-    "        val_loss = 0.0\n",
-    "        with torch.no_grad():  \n",
-    "                for val_batch in val_loder:\n",
-    "                    val_y = model.forward(val_batch)\n",
-    "                    val_loss_batch = F.nll_loss(val_y, val_batch.y)\n",
-    "                    val_loss += val_loss_batch\n",
-    "                        \n",
-    "        val_loss_avg = val_loss / len(val_loder)\n",
-    "        print(f\"Epoch: {epoch}, Train loss: {round(min_score.item(), 5)}, Val loss: {round(val_loss_avg.item(), 5)}\")"
+    "def main(layer_1_out, dropout, activation, batch_size, train_data, val_data, optimizer, learning_rate, num_epochs):\n",
+    "  seed_everything(42)\n",
+    "\n",
+    "  print('Device:', 'cuda' if torch.cuda.is_available() else 'cpu', flush = True)\n",
+    "\n",
+    "  device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "  model = GCN(out_ = layer_1_out, \n",
+    "              dropout_ = dropout, \n",
+    "              activation_ = activation).to(device)\n",
+    "  \n",
+    "  #Make dataset loaders\n",
+    "  train_loader = DataLoader(train_data, batch_size= batch_size, shuffle = True)\n",
+    "  val_loader = DataLoader(val_data, batch_size= batch_size)\n",
+    "  \n",
+    "  # Optimizer\n",
+    "  if optimizer == 'adam':\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "  else:\n",
+    "    optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)\n",
+    "  min_val = 10**6\n",
+    "  \n",
+    "  \n",
+    "  for epoch in range(num_epochs):\n",
+    "    train_loss = train_loop(model, train_loader, optimizer, device)\n",
+    "    val_loss = val_loop(model, val_loader, device)\n",
+    "    if val_loss < min_val:\n",
+    "        min_val = val_loss\n",
+    "        print(f\"Epoch: {epoch}, Train loss: {train_loss.item()}, Val loss: {val_loss.item()}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1d78e8a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: cpu\n",
+      "Epoch: 0, Train loss: 1.7228906154632568, Val loss: 1.544285774230957\n",
+      "Epoch: 1, Train loss: 1.478562593460083, Val loss: 1.3853126764297485\n",
+      "Epoch: 2, Train loss: 1.3725016117095947, Val loss: 1.2425600290298462\n",
+      "Epoch: 3, Train loss: 1.3090946674346924, Val loss: 1.2014065980911255\n",
+      "Epoch: 5, Train loss: 1.2543377876281738, Val loss: 1.0950584411621094\n",
+      "Epoch: 8, Train loss: 1.2169878482818604, Val loss: 1.0524568557739258\n",
+      "Epoch: 15, Train loss: 1.1852986812591553, Val loss: 1.0498499870300293\n",
+      "Epoch: 19, Train loss: 1.1586687564849854, Val loss: 1.042557716369629\n",
+      "Epoch: 33, Train loss: 1.1568042039871216, Val loss: 1.029697060585022\n",
+      "Epoch: 47, Train loss: 1.1603965759277344, Val loss: 0.9898574352264404\n"
+     ]
+    }
+   ],
+   "source": [
+    "main(layer_1_out = 32, \n",
+    "     dropout = 0.5, \n",
+    "     activation = 'relu', \n",
+    "     batch_size = 32, \n",
+    "     train_data = train_data, \n",
+    "     val_data = val_data, \n",
+    "     optimizer = 'sgd', \n",
+    "     learning_rate = 0.001,\n",
+    "     num_epochs = 500)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27af15ad",
+   "id": "9cf463bd",
    "metadata": {},
    "outputs": [],
    "source": []
