--- a/hpc/model training/Random loss.ipynb
+++ b/hpc/model training/Random loss.ipynb
@@ -663,9 +663,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d3930ba",
+   "metadata": {},
+   "source": [
+    "# Load data test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5ecfa78e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Torch\n",
+    "import torch\n",
+    "from torch.optim.lr_scheduler import StepLR\n",
+    "from torch_geometric.loader import DataLoader\n",
+    "from torch_geometric import seed_everything\n",
+    "\n",
+    "\n",
+    "#other imports \n",
+    "import numpy as np \n",
+    "import random\n",
+    "\n",
+    "#New imports\n",
+    "from help_funcs.param import get_optimizer, get_loss_function\n",
+    "from help_funcs.training import train_loop, val_loop\n",
+    "from help_funcs.data_func import get_node_features, load_dataset\n",
+    "from models.GCN import GCN\n",
+    "\n",
+    "#Get number of features + print their names\n",
+    "selected_feature = ['var_bin', 'mean_bin']\n",
+    "\n",
+    "#Load data\n",
+    "train_data = load_dataset(dataset = 'train', \n",
+    "                            num_of_classes = 4,\n",
+    "                            feature_names = selected_feature,\n",
+    "                            edge_names = ['corr_var_bin_21','corr_mean_bin_21',\n",
+    "                                        'corr_var_bin_42','corr_mean_bin_42',\n",
+    "                                        'corr_var_bin_84','corr_mean_bin_84'],\n",
+    "                            edge_w_thres = None,\n",
+    "                            GAT = True)\n",
+    "\n",
+    "train_loader = DataLoader(train_data, \n",
+    "                            batch_size=16, \n",
+    "                            shuffle = True,\n",
+    "                            )\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "57a04dd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 4352], pca_var_1=[272], pca_var_2=[272], pca_mean_1=[272], pca_mean_2=[272], pca_all_1=[272], pca_all_2=[272], x=[272, 16], edge_attr=[4352, 6], y=[16], batch=[272], ptr=[17])\n",
+      "DataBatch(edge_index=[2, 2448], pca_var_1=[153], pca_var_2=[153], pca_mean_1=[153], pca_mean_2=[153], pca_all_1=[153], pca_all_2=[153], x=[153, 16], edge_attr=[2448, 6], y=[9], batch=[153], ptr=[10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in train_loader:\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ecfa78e",
+   "id": "75157138",
    "metadata": {},
    "outputs": [],
    "source": []
