--- a/hpc/model training/Random models.ipynb
+++ b/hpc/model training/Random models.ipynb
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.dummy import DummyClassifier\n",
-    "from sklearn.metrics import f1_score, log_loss"
+    "from sklearn.metrics import f1_score, log_loss, accuracy_score"
    ]
   },
   {
@@ -52,15 +52,15 @@
     "    \n",
     "    predicted_y_train = clf.predict(train_data)\n",
     "    prob_y_train = clf.predict_proba(train_data)\n",
-    "    print(f\"Train - Loss {round(log_loss(train_data, prob_y_train), 2)}, F1-score: {round(f1_score(predicted_y_train, train_data, average='micro'), 2)}\")\n",
+    "    print(f\"Train - Loss {round(log_loss(train_data, prob_y_train), 2)}, Accuracy: {round(accuracy_score(predicted_y_train, train_data)*100,2)}, F1-score: {round(f1_score(predicted_y_train, train_data, average='macro'), 2)}\")\n",
     "\n",
     "    predicted_y_val = clf.predict(val_data)\n",
     "    prob_y_val = clf.predict_proba(val_data)\n",
-    "    print(f\"Valdiation - Loss {round(log_loss(val_data, prob_y_val), 2)}, F1-score: {round(f1_score(predicted_y_val, val_data, average='micro'), 2)}\")\n",
+    "    print(f\"Valdiation - Loss {round(log_loss(val_data, prob_y_val), 2)}, Accuracy: {round(accuracy_score(predicted_y_val, val_data)*100,2)}, F1-score: {round(f1_score(predicted_y_val, val_data, average='macro'), 2)}\")\n",
     "\n",
     "    predicted_y_test = clf.predict(test_data)\n",
     "    prob_y_test = clf.predict_proba(test_data)\n",
-    "    print(f\"Test - Loss {round(log_loss(test_data, prob_y_test), 2)}, F1-score: {round(f1_score(predicted_y_test, test_data, average='micro'), 2)}\")\n"
+    "    print(f\"Test - Loss {round(log_loss(test_data, prob_y_test), 2)}, Accuracy: {round(accuracy_score(predicted_y_test, test_data)*100,2)}, F1-score: {round(f1_score(predicted_y_test, test_data, average='macro'), 2)}\")\n"
    ]
   },
   {
@@ -73,9 +73,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - Loss 1.39, F1-score: 0.25\n",
-      "Valdiation - Loss 1.39, F1-score: 0.2\n",
-      "Test - Loss 1.39, F1-score: 0.19\n"
+      "Train - Loss 1.39, Accuracy: 25.4, F1-score: 0.21\n",
+      "Valdiation - Loss 1.39, Accuracy: 19.75, F1-score: 0.18\n",
+      "Test - Loss 1.39, Accuracy: 19.48, F1-score: 0.16\n"
      ]
     }
    ],
@@ -93,9 +93,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - Loss 1.13, F1-score: 0.49\n",
-      "Valdiation - Loss 1.2, F1-score: 0.4\n",
-      "Test - Loss 1.2, F1-score: 0.42\n"
+      "Train - Loss 1.13, Accuracy: 49.21, F1-score: 0.16\n",
+      "Valdiation - Loss 1.2, Accuracy: 39.51, F1-score: 0.14\n",
+      "Test - Loss 1.2, Accuracy: 41.56, F1-score: 0.15\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "2120c178",
    "metadata": {},
    "outputs": [
@@ -113,9 +113,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - Loss 0.69, F1-score: 0.49\n",
-      "Valdiation - Loss 0.69, F1-score: 0.46\n",
-      "Test - Loss 0.69, F1-score: 0.53\n"
+      "Train - Loss 0.69, Accuracy: 48.53, F1-score: 0.49\n",
+      "Valdiation - Loss 0.69, Accuracy: 45.68, F1-score: 0.45\n",
+      "Test - Loss 0.69, Accuracy: 53.25, F1-score: 0.53\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "e9ec6179",
    "metadata": {},
    "outputs": [
@@ -133,9 +133,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - Loss 0.69, F1-score: 0.51\n",
-      "Valdiation - Loss 0.69, F1-score: 0.6\n",
-      "Test - Loss 0.69, F1-score: 0.58\n"
+      "Train - Loss 0.69, Accuracy: 50.79, F1-score: 0.34\n",
+      "Valdiation - Loss 0.69, Accuracy: 60.49, F1-score: 0.38\n",
+      "Test - Loss 0.69, Accuracy: 58.44, F1-score: 0.37\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e4bfd8a",
+   "id": "24644a2d",
    "metadata": {},
    "outputs": [],
    "source": []
