Notebooks test + clean up
Notebooks test + clean up

--- a/model training/Random models.ipynb
+++ b/model training/Random models.ipynb
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "d8fa60b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_dummy_data(dataset:str, binary:bool = False):\n",
-    "    data = pd.read_csv(f'data.nosync/networks_multi/{dataset}_set_files.csv')\n",
+    "    data = pd.read_csv(f'../data.nosync/networks_multi/{dataset}_set_files.csv')\n",
     "    data['class'] = data['file'].apply(lambda x: x.split('/')[-1].split('_')[3])\n",
     "    if binary:\n",
     "        data['class'] = data['class'].replace({'ADHD': 'Non-TD',\n",
@@ -64,8 +64,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90fe7125",
+   "metadata": {},
+   "source": [
+    "# Multi-class"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "19d476e3",
    "metadata": {},
    "outputs": [
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "73bb2fd1",
    "metadata": {},
    "outputs": [
@@ -104,8 +112,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bcf1869b",
+   "metadata": {},
+   "source": [
+    "# Binary-class"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "2120c178",
    "metadata": {},
    "outputs": [
@@ -125,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "e9ec6179",
    "metadata": {},
    "outputs": [
