--- a/model training/Evaluation.ipynb
+++ b/model training/Evaluation.ipynb
@@ -7,6 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "from help_funcs.evaluation import evaluate_model, epistemic, get_pca_plots\n",
     "from sklearn.metrics import f1_score "
    ]
@@ -352,6 +355,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43dee1e4",
+   "metadata": {},
+   "source": [
+    "#### Try running with dropout rate a 100 times, and predict the most classified class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "fdc33c43",
@@ -534,19 +545,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "66b0a4b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import confusion_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "af37cb9c",
    "metadata": {},
    "outputs": [],
@@ -589,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "92761c9e",
    "metadata": {},
    "outputs": [
@@ -626,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "6ecf9313",
    "metadata": {},
    "outputs": [
@@ -669,14 +667,6 @@
     "print(logistic_multi['train'].shape)\n",
     "plot_confusion_matrix(4, cf = logistic_multi, extended = False, fig_name = 'logistic_multi_confusion_matrix')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fce8738",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
